tests/ui/covariant.stderr
error: lifetime may not live long enough
  --> tests/ui/covariant.rs:14:5
   |
13 | fn require_contravariant<'a>(phantom: CovariantPhantom<&'a str>) -> CovariantPhantom<&'static str> {
   |                          -- lifetime `'a` defined here
14 |     phantom
   |     ^^^^^^^ returning this value requires that `'a` must outlive `'static`
